tests/testcases/invalid/08_unrecognized_operator.ciel
fn main() -> int {
    int x = 1 $$$ 2; // invalid operator sequence
    return 0;
}
